Add Azure Static Web Apps deployment configuration
This commit introduces a new Azure Static Web Apps deployment pipeline in azure-pipelines-swa.yml, streamlining the build and deployment process. Additionally, a staticwebapp.config.json file is added to manage routing and error handling. The existing azure-pipelines.yml file is updated to utilize the new deployment task, replacing the previous artifact archiving and publishing steps. A GitHub Actions workflow for Azure Static Web Apps is also created to handle deployments on push and pull request events.

--- a/azure-pipelines-swa.yml
+++ b/azure-pipelines-swa.yml
@@ -1,8 +1,4 @@
-# Node.js with React
-# Build a Node.js project that uses React.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
-
+# Azure Static Web Apps deployment pipeline
 trigger:
 - main
 
@@ -41,4 +37,4 @@ stages:
         output_location: 'dist'
         skip_app_build: true
         deployment_token: $(azureStaticWebAppsToken)
-      displayName: 'Deploy to Azure Static Web App'
+      displayName: 'Deploy to Azure Static Web App' 
